# llama.cpp

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/grpc/: CMakeLists.txt  gpt-service.cpp  gpt-service.hpp  gpt.proto  main.cpp
